[tool.poetry]
name = "python-test-helper"
version = "0.1.0"
description = "App for supporting students in passing exams"
authors = ["BartPlay <bartekzlotnik@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_test_helper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
