[tool.poetry]
name = "python-test-helper"
version = "0.1.0"
description = "App for supporting students in passing exams"
authors = ["BartPlay <bartekzlotnik@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_test_helper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-test-helper ="python_test_helper.commands:cli"
